@@ -1,0 +1,2 @@
+staging_areas_indexes=18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,34,35,36,37,38,39,40,41,42,43,44,45,46,47,49,50,51,52,53,54,55
+staging_areas_prefix=/nfs/sf
